--- a/src/App.css
+++ b/src/App.css
@@ -1,55 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Familjen+Grotesk:wght@400;700&display=swap');
-@import "~@fontsource/space-grotesk";
-@import "~@fontsource/darker-grotesque";
-
-:root {
-  /* color */
-  --colorbackground: #1c1c1c;
-  --colorprimary: #f5f5dc;
-  --colorsecondary: #d7d7a8;
-  --coloraccent: #507963;
-  
-  /* fonts */
-  --ff: Familjen Grotesk;
-  --ff-links: Space Grotesk;
-  --ff-details: Darker Grotesque;
-
-  /* font size */
-  --font-xxs: 2rem;
-  --font-xs: 2.5rem;
-  --font-s: 3rem;
-  --font-m: 3.5rem;
-  --font-l: 4rem;
-  --font-xl: 4.5rem;
-
-  /* margins */
-  --margin-xxs: 3rem;
-  --margin-xs: 4rem;
-  --margin-s: 5rem;
-  --margin-m: 6rem;
-  --margin-l: 7rem;
-  --margin-xl: 8rem;
-
-  /* text */
-  /* font weigh - font size - line height - font family */
-  --h1: normal 96px/128px var(--ff); /* name */
-  --h2: normal 72px/120px var(--ff-links); /* work about contact */
-  --h3: normal 40px/56px var(--ff-details); /* devops bachelor msc */
-  --h4: normal 32px/64px var(--ff-links); /* li tw ig gi */
-  --h5: normal 32px/64px var(--ff); /* valence spain */
+* {
+  margin: 0;
+  padding: 0;
 }
 
-body {
-  background: var(--colorbackground);
-  height: 100vh;
-  display: flex;
-  /* max-width: 1280px; */
+html,
+body,
+#root {
+  height: 100%;
+}
 
-  /* horizontal margin */
-  margin-left: var(--margin-xl);
-  margin-right: var(--margin-xl);
+.app {
+  height: 100%;
+}
 
-  /* vertical margin */
-  margin-top: var(--margin-m);
-  margin-bottom: var(--margin-m);
+ul {
+  list-style: none;
 }
