--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -53,6 +53,8 @@ div {
 }
 .work-parent-container {
   flex-direction: row;
+  height: 100vh;
+  padding: 0.5rem 0.75rem;
 }
 .work-first-column {
   display: flex;
@@ -60,15 +62,54 @@ div {
   flex: 1;
   padding: 96px 94px;
 }
-.work-under-construction {
-  /* display: flex; */
-  align-items: end;
-  flex: 1;
+.work-second-column {
+  display: flex;
+  flex-direction: column;
+  row-gap: 16px;
   padding: 96px 94px;
 }
-
+.work-homelink {
+  font: normal 48px/normal var(--ff);;
+}
 h1 {
   font: var(--h1);
   color: var(--colorprimary);
   margin: 0;
+}
+
+@media (max-width: 500px) {
+  .work-parent-container {
+    flex-direction: row;
+    height: 100vh;
+    /* padding: 0.5rem 0.75rem; */
+    flex-wrap: wrap;
+  }
+  .work-first-column {
+    display: flex;
+    /* align-items: start; */
+    /* justify-content: flex-start; */
+    flex: 1;
+    padding: 2rem 1rem;
+    height: 5vh;
+  }
+  .work-second-column {
+    display: flex;
+    flex-direction: column;
+
+    row-gap: 8px;
+    /* padding: 3rem 2rem; */
+  }
+  .work-under-construction {
+    /* display: flex; */
+    align-items: start;
+    flex: 1;
+    margin: auto;
+    /* padding: 2rem 1rem; */
+  }
+  .work-under-construction {
+    font: normal 24px/normal var(--ff);;
+  }
+  .work-homelink {
+    font: normal 40px/normal var(--ff);;
+  }
 }
