--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -31,7 +31,7 @@
   
     /* text */
     /* font weigh - font size - line height - font family */
-    --homelink-contact: normal 48px/normal var(--ff); /* ~/ */
+    --homelink-about: normal 48px/normal var(--ff); /* ~/ */
     --about-h1: bold 80px/normal var(--ff); /* hi! */
     --about-h2: normal 24px/normal var(--ff-details); /* work about contact */
     --about-h3: normal 28px/normal var(--ff-details); /* devops bachelor msc */
@@ -39,20 +39,84 @@
 }
 
 .about-homelink {
-    font: var(--homelink-contact)
+  font: var(--homelink-contact)
 }
 
 div {
     width: 100%;
     display: flex;
 }
+.about-parent-container {
+  display: flex;
+  height: 100vh;
+  flex-wrap: wrap;
+}
+.about-first-column {
+  display: flex;
+  align-items: start;
+  flex: 1;
+  padding: 96px 94px;
+}
+.about-homelink {
+  font: var(--homelink-about)
+}
 .about-h2-div {
-    flex-direction: column;
+  flex-direction: column;
+}
+.about-greeting-section {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: flex-start;
+  flex: 5;
+  padding: 96px 94px;
+}
+.about-hi-div {
+  flex: 2;
+}
+
+/* h1 */
+.about-h1 {
+  font: var(--about-h1);
 }
 
 h2 {
-    font: var(--about-h2);
+  font: var(--about-h2);
 }
 .about-h2 {
     margin: 0.75rem;
+}
+
+@media (max-width: 500px) {
+  .about-parent-container {
+    flex-direction: row;
+    height: 100vh;
+    /* padding: 0.5rem 0.75rem; */
+    flex-wrap: wrap;
+  }
+  .about-first-column {
+    display: flex;
+    flex: 1;
+    padding: 2rem 1rem;
+    height: 5vh;
+  }
+  .about-second-column {
+    display: flex;
+    flex-direction: column;
+    row-gap: 8px;
+  }
+  .about-greeting-section {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: flex-start;
+    flex: 5;
+    padding: 2rem 1rem;
+  }
+  .about-h1 {
+    font: bold 48px/normal var(--ff); ;
+  }
+  .about-homelink {
+    font: normal 40px/normal var(--ff);;
+  }
 }
