--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -76,7 +76,7 @@
   flex: 1;
   padding: 96px 94px;
 }
-.contact-greeting-section {
+.contact-second-column {
   display: flex;
   flex-direction: column;
   align-items: start;
@@ -89,6 +89,7 @@
 }
 .contact-h2-div {
   flex: 4;
+  flex-direction: column;
 }
 .contact-empty-horizontal {
   flex: 1;
@@ -131,4 +132,88 @@
   font: var(--contact-a);
   color: var(--colorprimary);
   margin-bottom: 16px;
+}
+
+@media (max-width: 500px) {
+  .work {
+    margin: 0;
+    padding-bottom: 40px;
+  }
+  .about {
+    margin: 0;
+    padding-bottom: 40px;
+  }
+  .contact {
+    margin: 0;
+    padding-bottom: 40px;
+  }
+
+  .contact-homelink {
+    font: normal 40px/normal var(--ff);
+  }
+  
+  /* div */
+  .contact-parent-container {
+    display: flex;
+    height: 100vh;
+    flex-wrap: wrap;
+  }
+  .contact-first-column {
+    display: flex;
+    padding: 2rem 1rem;
+    height: 5vh;
+  }
+  .contact-second-column {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    padding: 7rem 1rem;
+    justify-content: flex-start;
+    margin: 0;
+  }
+  .contact-h2-div {
+    flex-direction: column;
+    row-gap: 8px;
+  }
+  .contact-empty-horizontal {
+    flex: 0;
+  }
+  .contact-info {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+  }
+  .contact-media {
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+    flex-wrap: wrap;
+  }
+  .contact-empty-space {
+    display: flex;
+  }
+  
+  /* h1 & h2 */
+  .contact-h1 {
+    font: bold 32px/normal var(--ff);
+    margin: 0;
+  }
+  .contact-h2 {
+    font: var(--h2-catch);
+    color: var(--colorprimary);
+    margin: 0;
+    margin-bottom: 16px;
+  }
+  
+  /* a */
+  .contact-a {
+    font: normal 12px/normal var(--ff-links);
+    color: var(--colorprimary);
+    margin: 0;
+  }
+  .contact-mail-a {
+    font: normal 24px/normal var(--ff-links);
+    color: var(--colorprimary);
+    margin-bottom: 32px;
+  }
 }
